--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "ccf-what",
   "title": "CCF What?",
   "description": "Loop up CCF rankings.",
-  "icon": "command-icon.png",
+  "icon": "logo.jpg",
   "author": "crackedpoly",
   "owner": "nextlab",
   "categories": [
@@ -13,8 +13,8 @@
   "commands": [
     {
       "name": "index",
-      "title": "CCF",
-      "subtitle": "A tool for chinese CS researcher.",
+      "title": "Search CCF Rankings",
+      "subtitle": "Fast loop up the CCF ranking of one publication.",
       "description": "Fast loop up the CCF ranking of one publication.",
       "mode": "view"
     }
