change its categories

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "crackedpoly",
   "owner": "nextlab",
   "categories": [
-    "Applications"
+    "Productivity"
   ],
   "license": "MIT",
   "commands": [
