fix: lint style

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "ccf-what",
   "title": "CCF What?",
   "description": "Loop up CCF rankings.",
-  "icon": "logo.jpg",
+  "icon": "ccf-what_logo.png",
   "author": "crackedpoly",
   "owner": "nextlab",
   "categories": [
