--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     {
       "name": "index",
       "title": "Search CCF Rankings",
-      "subtitle": "Fast loop up the CCF ranking of one publication.",
       "description": "Fast loop up the CCF ranking of one publication.",
       "mode": "view"
     }
@@ -25,7 +24,7 @@
       "type": "textfield",
       "required": false,
       "title": "Data Source URL",
-      "default": "https://cdn.jsdelivr.net/gh/CrackedPoly/ccf-what@latest/src/resource/CCF_Ranking_2022.json"
+      "default": "https://raw.githubusercontent.com/CrackedPoly/ccf-what/main/src/resource/CCF_Ranking_2022.json"
     },
     {
       "name": "UpdateInterval",
@@ -54,7 +53,7 @@
       "default": "Never"
     },
     {
-      "name": "localization",
+      "name": "Localization",
       "title": "Language",
       "description": "Choose the language you prefer.",
       "type": "dropdown",
